Revert "fix live overflow"
This reverts commit 803af532185577dcc3528b892e0f1cd631263e96.

--- a/styles.scss
+++ b/styles.scss
@@ -674,7 +674,7 @@ a {
   max-width: 800px;
   width: unset;
 }
-.eventsFlowLive {
+.eventsFlow {
   font-family: Integral CF, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-style: normal;
